# A2UI

./: .gitignore  .gitmodules  mkdocs.yaml
.claude/skills/a2ui-mcp-integration/: SKILL.md
.claude/skills/a2ui-mcp-integration/references/: llm-httpx-bypass.md  react-integration.md
.github/workflows/: release.yml
agent_sdks/conformance/: parser.yaml  validator.yaml
agent_sdks/python/src/a2ui/parser/: streaming.py
agent_sdks/python/tests/conformance/: test_conformance.py
agent_sdks/python/tests/parser/: test_streaming_v08.py  test_streaming_v09.py
docs/: glossary.md
docs/concepts/: actions.md
docs/guides/: theming.md
renderers/web_core/: package-lock.json  package.json
renderers/web_core/src/v0_9/: index.ts
tools/a2ui-agent/: .gitignore  go.mod  pyproject.toml
tools/a2ui-agent/agent/: config.py  graph.py  llm_httpx.py  mcp_client.py  server.py
tools/a2ui-agent/api/v1/: agent.proto
tools/a2ui-agent/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
tools/a2ui-agent/frontend/src/: App.css  App.tsx  agent-client.ts
tools/a2ui-agent/gateway/: go.mod  main.go
tools/a2ui-agent/scripts/: generate.py
tools/a2ui-mcp-server/: .gitignore  go.mod  main.go
tools/a2ui-mcp-server/internal/a2ui/: builder.go  types.go  validation.go
tools/a2ui-mcp-server/internal/catalog/: loader.go  loader_test.go  types.go
tools/a2ui-mcp-server/internal/handler/: component.go  protocol.go  render.go
tools/a2ui-mcp-server/internal/schema/: generator.go
tools/a2ui-mcp-server/internal/session/: state.go
(+11 files in other folders)
