[project]
name = "a2ui-agent"
version = "0.1.0"
description = "A2UI Agent Service — LangGraph agent that calls A2UI MCP tools"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "langgraph>=0.4.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-deepseek>=0.1.0",
    "langchain-openai>=0.3.0",
    "protobuf>=5.29.0",
    "click>=8.0.0",
]

[project.scripts]
a2ui-agent = "agent.server:main"
generate = "scripts.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "scripts"]
